Complete index.html and tweets.html with required structure and features

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Tweets Page</title>
+  <meta charset="utf-8">
+  <title>My Tweets</title>
 </head>
 <body>
   <header>
@@ -11,28 +11,21 @@
       <li><a href="tweets.html">Tweets</a></li>
     </ul>
   </header>
-
   <main>
     <article>
-      <h1>My Embedded Tweet</h1>
-
-      <!-- Embedded Tweet from Twitter -->
+      <h1>My Tweets</h1>
       <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Today is a good day to build something cool with HTML. #webdev <a href="https://twitter.com/FreeCodeCamp/status/1385990197231544321">April 23, 2021</a></p>
-        &mdash; freeCodeCamp.org (@freeCodeCamp) <a href="https://twitter.com/FreeCodeCamp/status/1385990197231544321">April 23, 2021</a>
+        <p lang="en" dir="ltr">Just setting up my Twitter. #myfirstTweet</p>&mdash; Jack (@jack) <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
       </blockquote>
       <script async src="https://platform.twitter.com/widgets.js"></script>
-
-      <p>Go back to the <a href="index.html">homepage</a>.</p>
     </article>
-
     <aside>
       <p>placeholder to add comment thread later</p>
     </aside>
   </main>
-
   <footer>
-    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank">here</a></p>
+    <p>Made by codeRonin-gh - <a href="https://twitter.com/codeRonin-gh" target="_blank">here</a>.</p>
   </footer>
 </body>
 </html>
+
