--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,51 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Name - Personal Portfolio</title>
+  <title>My First Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0; padding: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background-color: #004080;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    main {
+      padding: 20px;
+      max-width: 800px;
+      margin: 20px auto;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    footer {
+      background-color: #222;
+      color: #ccc;
+      text-align: center;
+      padding: 15px;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+      font-size: 14px;
+    }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>I build fun and useful websites!</p>
+    <h1>Welcome to My Portfolio</h1>
+    <p>Your gateway to my skills and projects</p>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="#introduction">Introduction</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-  <section id="introduction">
-    <h2>Introduction</h2>
-    <p>Hello! I’m learning how to code.</p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <article class="project">
-      <h3>My Cool Website</h3>
-      <p>This is my first website ever!</p>
-      <a href="../html_basic/index.html" target="_blank">View It</a>
+  <main>
+    <article>
+      <h2>About Me</h2>
+      <p>Hello! I am a passionate developer eager to build impactful projects.</p>
+      <p>In this portfolio, you'll find some of my best work along with my contact information.</p>
     </article>
-  </section>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I like drawing, reading, and playing soccer.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email me: <a href="mailto:you@example.com">you@example.com</a></p>
-    <p><a href="https://github.com/yourusername" target="_blank">GitHub</a></p>
-    <p><a href="https://linkedin.com" target="_blank">LinkedIn</a></p>
-  </section>
+  </main>
 
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank" rel="noopener noreferrer">GitHub</a></p>
   </footer>
 </body>
 </html>
+
