Initial commit for My_First_Portfolio project

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,6 +16,25 @@
       padding: 20px;
       text-align: center;
     }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 10px 0 0 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+    nav ul li {
+      display: inline;
+    }
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
     main {
       padding: 20px;
       max-width: 800px;
@@ -47,6 +66,12 @@
   <header>
     <h1>Welcome to My Portfolio</h1>
     <p>Your gateway to my skills and projects</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
@@ -54,6 +79,8 @@
       <h2>About Me</h2>
       <p>Hello! I am a passionate developer eager to build impactful projects.</p>
       <p>In this portfolio, you'll find some of my best work along with my contact information.</p>
+      <p>My skills include HTML, CSS, and JavaScript, which I use to create beautiful, functional websites.</p>
+      <p>I am continuously learning and growing to improve my craft.</p>
     </article>
   </main>
 
@@ -62,4 +89,5 @@
   </footer>
 </body>
 </html>
+
 
