--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My First Webpage</title>
+  <meta charset="utf-8">
+  <title>My First Cool Webpage</title>
 </head>
 <body>
-  <h1>Welcome to My First Webpage</h1>
-  <p>Hello, world!</p>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+    <h1>Welcome to My Portfolio</h1>
+    <p>Your gateway to my skills and projects</p>
+  </header>
+
+  <main>
+    <article>
+      <h2>Welcome to My Website!</h2>
+      <h3>I’m Learning HTML</h3>
+      <h4>This is My First Project</h4>
+
+      <p>Hi! I'm excited to learn coding.</p>
+      <p>I love HTML and making websites.</p>
+      <p>One day I will be a great web developer.</p>
+      <p>This is my first cool webpage!</p>
+
+      <a href="https://www.google.com"> 
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image" width="200">
+      </a>
+
+      <table>
+        <thead>
+          <tr><th>Name</th><th>Age</th><th>Country</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>John</td><td>25</td><td>USA</td></tr>
+          <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+          <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
+          <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
+        </tbody>
+      </table>
+
+      <p><a href="tweets.html">Go to my Tweets page</a></p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
+
