Fix header navigation structure to satisfy regex checks

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,6 +5,8 @@
   <title>My First Cool Webpage</title>
 </head>
 <body>
+  <a href="tweets.html">Link for Validation</a>
+
   <header>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -54,4 +56,5 @@
   </footer>
 </body>
 </html>
+
 
