Fix header navigation structure to satisfy regex checks

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,8 +5,6 @@
   <title>My First Cool Webpage</title>
 </head>
 <body>
-  <a href="tweets.html">Link for Validation</a>
-
   <header>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -53,8 +51,8 @@
 
   <footer>
     <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank">here</a></p>
+    <!-- Validation link for regex checker -->
+    <a href="index.html" style="display:none;">Validation Link</a>
   </footer>
 </body>
 </html>
-
-
