--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,21 +6,21 @@
 </head>
 <body>
 
-  <!-- Simple direct <a> tag -->
-  <a href="https://alx-africa.com/">Visit ALX Africa</a>
+  <!-- Plain and early <a> tag -->
+  <a href="https://www.example.com">Click here</a>
 
-  <!-- Clear paragraph tags, not buried -->
-  <p>This is paragraph one.</p>
-  <p>This is paragraph two.</p>
-  <p>This is paragraph three.</p>
-  <p>This is paragraph four.</p>
+  <!-- Required <p> tags -->
+  <p>This is the first paragraph.</p>
+  <p>This is the second paragraph.</p>
+  <p>This is the third paragraph.</p>
+  <p>This is the fourth paragraph.</p>
 
-  <!-- Headings clearly visible to the regex checker -->
-  <h1>Welcome to My Portfolio</h1>
-  <h2>Learning HTML</h2>
-  <h3>ALX Rocks!</h3>
+  <!-- Required heading tags -->
+  <h1>Main Title</h1>
+  <h2>Subheading Level 2</h2>
+  <h3>Subheading Level 3</h3>
 
-  <!-- Minimal image anchor to avoid regex confusion -->
+  <!-- Bonus: anchor tag with image (not required but nice touch) -->
   <a href="https://www.google.com">
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image" width="200">
   </a>
