Fix header navigation structure to satisfy regex checks

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,25 +5,52 @@
   <title>My First Cool Webpage</title>
 </head>
 <body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+    <h1>Welcome to My Portfolio</h1>
+    <p>Explore my journey as a budding developer!</p>
+  </header>
 
-  <!-- Plain and early <a> tag -->
-  <a href="https://www.example.com">Click here</a>
+  <main>
+    <article>
+      <h2>Welcome to My Website!</h2>
+      <h3>I’m Learning HTML</h3>
+      <h4>This is My First Project</h4>
 
-  <!-- Required <p> tags -->
-  <p>This is the first paragraph.</p>
-  <p>This is the second paragraph.</p>
-  <p>This is the third paragraph.</p>
-  <p>This is the fourth paragraph.</p>
+      <p>My name is Pax Baby, and I’m passionate about technology.</p>
+      <p>This website showcases my early steps into web development.</p>
+      <p>I am currently studying front-end web development and loving the process.</p>
+      <p>This is more than a project—it’s the start of something big!</p>
 
-  <!-- Required heading tags -->
-  <h1>Main Title</h1>
-  <h2>Subheading Level 2</h2>
-  <h3>Subheading Level 3</h3>
+      <a href="https://www.google.com">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image" width="200">
+      </a>
 
-  <!-- Bonus: anchor tag with image (not required but nice touch) -->
-  <a href="https://www.google.com">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image" width="200">
-  </a>
+      <table>
+        <thead>
+          <tr><th>Name</th><th>Age</th><th>Country</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>John</td><td>25</td><td>USA</td></tr>
+          <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+          <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
+          <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
+        </tbody>
+      </table>
 
+      <p><a href="tweets.html">Go to my Tweets page</a></p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
