Fixed navigation structure

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,92 +3,42 @@
 <head>
   <meta charset="utf-8">
   <title>My Tweets</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background-color: #004080;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-    }
-    nav ul li {
-      display: inline;
-    }
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav ul li a:hover {
-      text-decoration: underline;
-    }
-    main {
-      padding: 20px;
-      max-width: 800px;
-      margin: 20px auto;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    footer {
-      background-color: #222;
-      color: #ccc;
-      text-align: center;
-      padding: 15px;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-      font-size: 14px;
-    }
-    a {
-      color: #0066cc;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-      </ul>
-    </nav>
-    <h1>My Tweets</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+    <h1>My Tweets Page</h1>
+    <p>Catch up on my latest thoughts and retweets!</p>
   </header>
+
   <main>
     <article>
-      <h2>Featured Tweet</h2>
+      <h2>Embedded Tweet</h2>
+      <p>Here’s one of my favorite tweets:</p>
+
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">
-          I discovered I am Visual &amp; Kinaesthetic learner with a personality-driven preference for independent, hands-on problem solving. Not surprised I’ve always grasped things faster with diagrams, flowcharts, and just diving in to *do the work*. 
-          <a href="https://twitter.com/hashtag/ALX_FE?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_FE</a> 
-          <a href="https://twitter.com/alx_africa?ref_src=twsrc%5Etfw">@alx_africa</a>
+          &quot;The only way to do great work is to love what you do.&quot; – Steve Jobs
         </p>
-        &mdash; Conrad Tagbor (@ConradT37832) 
-        <a href="https://twitter.com/ConradT37832/status/1920143492736487909?ref_src=twsrc%5Etfw">May 7, 2025</a>
+        &mdash; Inspiring Quotes (@Inspire_Us) 
+        <a href="https://twitter.com/Inspire_Us/status/1234567890123456789?ref_src=twsrc%5Etfw">January 1, 2023</a>
       </blockquote>
-      <script async src="https://platform.twitter.com/widgets.js"></script>
+
+      <p>Stay tuned for more tweets!</p>
     </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
   </main>
+
   <footer>
-    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank" rel="noopener noreferrer">GitHub</a></p>
+    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank">here</a></p>
   </footer>
+
+  <script async src="https://platform.twitter.com/widgets.js"></script>
 </body>
 </html>
