Add index.html and tweets.html for ALX HTML basic project

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -45,7 +45,7 @@
     </article>
 
     <aside>
-      <p>placeholder to add comment thread later</p>
+      <p>more quotes in the morning</p>
     </aside>
   </main>
 
