--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -31,7 +31,7 @@
     </article>
 
     <aside>
-      <p>placeholder to add comment thread later</p>
+      <p>More quotes in the morning</p>
     </aside>
   </main>
 
