Add index.html with headings, paragraphs, and clickable image

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,56 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>My First Cool Webpage</title>
+  <meta charset="UTF-8">
+  <title>Welcome to My First Webpage</title>
 </head>
 <body>
-  <header>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="tweets.html">Tweets</a></li>
-    </ul>
-    <h1>Welcome to My Portfolio</h1>
-    <p>Explore my journey as a budding developer!</p>
-  </header>
 
-  <main>
-    <article>
-      <h2>Welcome to My Website!</h2>
-      <h3>I’m Learning HTML</h3>
-      <h4>This is My First Project</h4>
+  <h1>My Journey into Web Development</h1>
+  <p>I have recently started learning HTML as part of the ALX Front-End Web Development program. It's exciting to finally bring my ideas to life through code.</p>
 
-      <p>My name is Pax Baby, and I’m passionate about technology.</p>
-      <p>This website showcases my early steps into web development.</p>
-      <p>I am currently studying front-end web development and loving the process.</p>
-      <p>This is more than a project—it’s the start of something big!</p>
+  <h2>Why I Chose Web Development</h2>
+  <p>The web is everywhere, and understanding how it works opens so many doors. I want to create websites that are beautiful, functional, and impactful.</p>
 
-      <a href="https://www.google.com">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image" width="200">
-      </a>
+  <h3>My Learning Goals</h3>
+  <p>My short-term goal is to build a strong foundation in HTML and CSS. Eventually, I want to explore JavaScript and build interactive web applications.</p>
 
-      <table>
-        <thead>
-          <tr><th>Name</th><th>Age</th><th>Country</th></tr>
-        </thead>
-        <tbody>
-          <tr><td>John</td><td>25</td><td>USA</td></tr>
-          <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
-          <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
-          <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
-        </tbody>
-      </table>
+  <p>This is just the beginning of a lifelong journey in tech. Every line of code is a step toward becoming a world-class developer.</p>
 
-      <p><a href="tweets.html">Go to my Tweets page</a></p>
-    </article>
+  <!-- Clickable image -->
+  <a href="https://www.alxafrica.com/" target="_blank">
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+  </a>
 
-    <aside>
-      <p>more quotes in the morning</p>
-    </aside>
-  </main>
-
-  <footer>
-    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank">here</a></p>
-  </footer>
 </body>
 </html>
