Add index.html with headings, paragraphs, and clickable image

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to My First Webpage</title>
+  <title>My First Webpage</title>
 </head>
 <body>
 
-  <h1>My Journey into Web Development</h1>
-  <p>I have recently started learning HTML as part of the ALX Front-End Web Development program. It's exciting to finally bring my ideas to life through code.</p>
+  <h1>Welcome to My First Webpage</h1>
 
-  <h2>Why I Chose Web Development</h2>
-  <p>The web is everywhere, and understanding how it works opens so many doors. I want to create websites that are beautiful, functional, and impactful.</p>
+  <h2>About This Page</h2>
+  <p>This is a simple HTML page created as part of my ALX Front-End Web Development journey. It contains headings, paragraphs, and an image.</p>
 
-  <h3>My Learning Goals</h3>
-  <p>My short-term goal is to build a strong foundation in HTML and CSS. Eventually, I want to explore JavaScript and build interactive web applications.</p>
+  <h3>Why HTML Matters</h3>
+  <p>HTML forms the basic structure of web pages. It allows developers to define content, organize layout, and link to other resources.</p>
 
-  <p>This is just the beginning of a lifelong journey in tech. Every line of code is a step toward becoming a world-class developer.</p>
+  <p>I am learning how to use semantic tags like headings and paragraphs to structure content effectively.</p>
 
-  <!-- Clickable image -->
+  <p>This is one of my very first webpages, and I’m excited to keep building more!</p>
+
+  <!-- Clickable image inside an <a> tag -->
   <a href="https://www.alxafrica.com/" target="_blank">
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
   </a>
