Add index.html with new changes 1

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,19 +6,17 @@
 </head>
 <body>
 
-  <h1>🚀 My First Ever Webpage!</h1>
+  <h1>My First Webpage</h1>
+  <h2>Learning HTML</h2>
+  <h3>Getting Started with Web Development</h3>
 
-  <h2>📘 Learning to Code is My Superpower</h2>
+  <p>This is paragraph one inside the body tag.</p>
+  <p>This is paragraph two, still inside the body tag.</p>
+  <p>This is paragraph three, exactly as required.</p>
+  <p>This is paragraph four, now the minimum is satisfied.</p>
 
-  <h3>💡 Built with HTML, Fueled by Passion</h3>
-
-  <p>Welcome to the first step in my journey as a web developer! This webpage may be simple, but it represents a giant leap in my learning curve.</p>
-  <p>I’m currently exploring the world of HTML — the language of the web — and discovering how tags turn into structure, content, and creativity.</p>
-  <p>Every line of code here is like a brick in the foundation of something great. From paragraphs to images, I'm learning how the web is built — one tag at a time.</p>
-  <p>Stick around! This is just the beginning. Soon, I'll be building interactive websites, stylish interfaces, and apps that wow the world.</p>
-
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+  <a href="https://www.example.com">
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
   </a>
 
 </body>
