Add tweets.html with changes

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -21,9 +21,9 @@
 
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">
-          &quot;The only way to do great work is to love what you do.&quot; – Steve Jobs
+          "The only way to do great work is to love what you do." – Steve Jobs
         </p>
-        &mdash; Inspiring Quotes (@Inspire_Us) 
+        — Inspiring Quotes (@Inspire_Us)
         <a href="https://twitter.com/Inspire_Us/status/1234567890123456789?ref_src=twsrc%5Etfw">January 1, 2023</a>
       </blockquote>
 
@@ -31,12 +31,12 @@
     </article>
 
     <aside>
-      <p>More quotes in the morning</p>
+      placeholder to add comment thread later
     </aside>
   </main>
 
   <footer>
-    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank">here</a></p>
+    Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank">here</a>
   </footer>
 
   <script async src="https://platform.twitter.com/widgets.js"></script>
