--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,93 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>My First Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background-color: #004080;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0 0 0;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-    nav ul li {
-      display: inline;
-    }
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav ul li a:hover {
-      text-decoration: underline;
-    }
-    main {
-      padding: 20px;
-      max-width: 800px;
-      margin: 20px auto;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    footer {
-      background-color: #222;
-      color: #ccc;
-      text-align: center;
-      padding: 15px;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-      font-size: 14px;
-    }
-    a {
-      color: #0066cc;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>Pax Baby - Personal Portfolio</title>
 </head>
+
 <body>
   <header>
-    <h1>Welcome to My Portfolio</h1>
-    <p>Your gateway to my skills and projects</p>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-      </ul>
-    </nav>
+    <h1>Pax Baby</h1>
+    <p>Empowering ideas through design, innovation, and clean code.</p>
   </header>
 
-  <main>
-    <article>
-      <h2>About Me</h2>
-      <p>Hello! I am a passionate developer eager to build impactful projects.</p>
-      <p>In this portfolio, you'll find some of my best work along with my contact information.</p>
-      <p>My skills include HTML, CSS, and JavaScript, which I use to create beautiful, functional websites.</p>
-      <p>I am continuously learning and growing to improve my craft.</p>
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section id="introduction">
+    <h2>Introduction</h2>
+    <p>Hello! I'm Pax Baby, an aspiring front-end developer passionate about user interfaces and human-centered digital experiences. My goal is to craft intuitive, accessible, and engaging web applications.</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+
+    <article class="project">
+      <h3>TechCon 2024 Website</h3>
+      <p>A responsive multi-page conference website built using semantic HTML5 and CSS Grid.</p>
+      <a href="https://github.com/codeRonin-gh/techcon2024" target="_blank">View Project</a>
     </article>
-  </main>
+
+    <article class="project">
+      <h3>To-Do List App</h3>
+      <p>A simple yet elegant productivity app with local storage support and mood-based UI.</p>
+      <a href="https://github.com/codeRonin-gh/todo-mood-app" target="_blank">View Project</a>
+    </article>
+
+    <article class="project">
+      <h3>Portfolio Website</h3>
+      <p>My personal portfolio designed with accessibility and performance in mind.</p>
+      <a href="https://github.com/codeRonin-gh/My_First_Portfolio" target="_blank">View Project</a>
+    </article>
+  </section>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I'm a transitioning professional from administrative management into tech, passionate about UI/UX design and front-end development. I’m currently enrolled in the ALX Front-End Web Development program and exploring opportunities in cloud computing and cybersecurity.</p>
+    <p>When I’m not coding, I enjoy playing Dream League Soccer 2025, crafting natural skincare formulas, and mentoring young minds.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>
+      <a href="https://www.linkedin.com/in/yourlinkedinprofile" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/codeRonin-gh" target="_blank">GitHub</a>
+    </p>
+  </section>
 
   <footer>
-    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank" rel="noopener noreferrer">GitHub</a></p>
+    <p>&copy; 2024 Pax Baby</p>
   </footer>
 </body>
+
 </html>
-
-
