--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,23 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My First Webpage</title>
+  <meta charset="utf-8">
+  <title>Pax Baby - Personal Portfolio</title>
 </head>
 <body>
 
-  <h1>My First Webpage</h1>
-  <h2>Learning HTML</h2>
-  <h3>Getting Started with Web Development</h3>
+  <header>
+    <h1>Pax Baby</h1>
+    <p>Creative Tech Enthusiast | Building tomorrow, today.</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <p>This is paragraph one inside the body tag.</p>
-  <p>This is paragraph two, still inside the body tag.</p>
-  <p>This is paragraph three, exactly as required.</p>
-  <p>This is paragraph four, now the minimum is satisfied.</p>
+  <section id="introduction">
+    <h2>Introduction</h2>
+    <p>Hello! I’m Pax Baby, an administrative professional pivoting into the world of tech with passion and purpose.</p>
+  </section>
 
-  <a href="https://www.example.com">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-  </a>
+  <section id="projects">
+    <h2>Projects</h2>
+    <article class="project">
+      <h3>Personal Portfolio Website</h3>
+      <p>This responsive website showcases my journey into web development. Built with HTML, CSS, and a spark of creativity.</p>
+      <a href="https://github.com/codeRonin-gh" target="_blank">View on GitHub</a>
+
+      <!-- ✅ REQUIRED TABLE OF LEARNERS -->
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
+    </article>
+  </section>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I bring years of administrative leadership into the tech world, merging strategy, structure, and user experience. My key skills include:</p>
+    <ul>
+      <li>Front-End Web Development</li>
+      <li>UI/UX Design</li>
+      <li>Cloud Computing Fundamentals</li>
+      <li>Project Coordination</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Let’s collaborate or connect:</p>
+    <ul>
+      <li>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></li>
+      <li>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></li>
+      <li>GitHub: <a href="https://github.com/codeRonin-gh" target="_blank">codeRonin-gh</a></li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 Pax Baby</p>
+  </footer>
 
 </body>
 </html>
