--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,88 +7,61 @@
 <body>
 
   <header>
-    <h1>Pax Baby</h1>
-    <p>Creative Tech Enthusiast | Building tomorrow, today.</p>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-      </ul>
-    </nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
   </header>
 
-  <section id="introduction">
-    <h2>Introduction</h2>
-    <p>Hello! I’m Pax Baby, an administrative professional pivoting into the world of tech with passion and purpose.</p>
-  </section>
+  <main>
+    <article>
+      <section id="introduction">
+        <h2>Introduction</h2>
+        <p>Hello! I’m Pax Baby, an administrative professional pivoting into the world of tech with passion and purpose.</p>
+      </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <article class="project">
-      <h3>Personal Portfolio Website</h3>
-      <p>This responsive website showcases my journey into web development. Built with HTML, CSS, and a spark of creativity.</p>
-      <a href="https://github.com/codeRonin-gh" target="_blank">View on GitHub</a>
+      <section id="projects">
+        <h2>Projects</h2>
+        <article class="project">
+          <h3>Personal Portfolio Website</h3>
+          <p>This responsive website showcases my journey into web development.</p>
+          <a href="https://github.com/codeRonin-gh" target="_blank">View on GitHub</a>
+          <table>
+            <thead>
+              <tr><th>Name</th><th>Age</th><th>Country</th></tr>
+            </thead>
+            <tbody>
+              <tr><td>John</td><td>25</td><td>USA</td></tr>
+              <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+              <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
+              <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
+            </tbody>
+          </table>
+        </article>
+      </section>
 
-      <!-- ✅ REQUIRED TABLE OF LEARNERS -->
-      <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Country</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>John</td>
-            <td>25</td>
-            <td>USA</td>
-          </tr>
-          <tr>
-            <td>Emily</td>
-            <td>28</td>
-            <td>Canada</td>
-          </tr>
-          <tr>
-            <td>Michael</td>
-            <td>32</td>
-            <td>Australia</td>
-          </tr>
-          <tr>
-            <td>Sophia</td>
-            <td>21</td>
-            <td>UK</td>
-          </tr>
-        </tbody>
-      </table>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>I bring years of admin leadership into tech, merging strategy with creativity.</p>
+      </section>
+
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
+        <p><a href="https://github.com/codeRonin-gh" target="_blank">GitHub</a></p>
+        <p><a href="https://linkedin.com" target="_blank">LinkedIn</a></p>
+      </section>
     </article>
-  </section>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I bring years of administrative leadership into the tech world, merging strategy, structure, and user experience. My key skills include:</p>
-    <ul>
-      <li>Front-End Web Development</li>
-      <li>UI/UX Design</li>
-      <li>Cloud Computing Fundamentals</li>
-      <li>Project Coordination</li>
-    </ul>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Let’s collaborate or connect:</p>
-    <ul>
-      <li>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></li>
-      <li>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></li>
-      <li>GitHub: <a href="https://github.com/codeRonin-gh" target="_blank">codeRonin-gh</a></li>
-    </ul>
-  </section>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
   <footer>
-    <p>&copy; 2024 Pax Baby</p>
+    <p>Made by Pax Baby - <a href="https://github.com/codeRonin-gh" target="_blank">here</a></p>
   </footer>
 
 </body>
 </html>
+
 
